--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.5",
     "express-winston": "^4.0.5",
     "helmet": "^4.4.1",
     "joi": "^17.3.0",
@@ -33,7 +34,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "deploy": "scp -r ./.env eeealesha@84.201.135.36:/home/eeealesha/movies-explorer-api"
   },
   "repository": {
     "type": "git",
